--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,12 @@
-2002-06-19  Aleksey Sanin  <aleksey@aleksey.com>
+2002-06-20  Aleksey Sanin  <aleksey@aleksey.com>
+	* apps/xmlsec.c: added password protected pem files
+        support 
 
+2002-06-19  Aleksey Sanin  <aleksey@aleksey.com>
 	* include/xmlsec/xmltree.h src/xmlsec.c src/xmltree.c: 
 	fixed ID attribute bug found by Sascha Breite
 
 Mon Jun  3 21:18:54 2002  Aleksey Sanin  <aleksey@aleksey.com>
-
 	* src/enveloped.c: improved performance
 
 Thu May 30 21:29:21 2002  Aleksey Sanin  <aleksey@aleksey.com>
