--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Wed Jul 10 8:45:23 2002  Aleksey Sanin  <aleksey@aleksey.com>
+	* configure.in docs/* : 0.0.7 release
+	
 Fri Jun 21 00:48:52 2002  Aleksey Sanin  <aleksey@aleksey.com>
 	* Makefile.am configure.in: added win32 folder to the
 	distribution
