--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 10 18:06:12 2002  Aleksey Sanin  <aleksey@aleksey.com> 
+	* Makefile.am config.h.in configure.in man/* xmlsec.spec.in:
+        man pages for xmlsec and xmlsec-config were added
+	* apps/xmlsec.c: "--version" and "--help" options added
+	
 Wed Jul 10 21:41:21 2002  Igor Zlatkovic <igor@stud.fh-frankfurt.de>
 	* win32/Makefile.msvc: Fixed minor typos, static link flags 
 	and bindist target
