added Debian packaging scripts from John Belmonte <jvb@prairienet.org>
* AUTHORS Makefile.am debian/* : added Debian packaging scripts from            John Belmonte  <jvb@prairienet.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
-Aleksey Sanin <aleksey@aleksey.com>
-Igor Zlatkovic <igor@stud.fh-frankfurt.de> (Win32 config files for LibXML and 
-					    LibXSLT used as template for 
-					    XML Sec Win32 config files)
-
+Aleksey Sanin  <aleksey@aleksey.com>
+Igor Zlatkovic <igor@stud.fh-frankfurt.de> for the Windows port
+John Belmonte  <jvb@prairienet.org> for the Debian port
 
