--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 10 21:39:59 2002  Aleksey Sanin  <aleksey@aleksey.com>
+	* AUTHORS Makefile.am debian/* : added Debian packaging scripts from 
+	John Belmonte  <jvb@prairienet.org>
+
 Wed Jul 10 21:24:43 2002  Aleksey Sanin  <aleksey@aleksey.com> 
 	* include/xmlsec/*.h src/*.c: some comments added
 
