--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul 11 11:47:14 2002  Aleksey Sanin  <aleksey@aleksey.com> 
+	* Makefile.am docs/* docs/api/*: added faq and documentation
+	pages
+
 Thu Jul 11 9:19:45 2002  Aleksey Sanin  <aleksey@aleksey.com>
 	* Makefile.am configure.in docs/api/*: added API docs
 	generation
