--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug  5 22:55:05 2002  Aleksey Sanin <aleksey@aleksey.com>
+
+	* Makefile.am tests/testDSig.sh tests/testEnc.sh: added
+	'perfcheck' flag to the Makefile for performance testing
+	    
 Mon Aug  5 21:11:41 2002  Aleksey Sanin <aleksey@aleksey.com>
 
 	* include/xmlsec/nodeset.h include/xmlsec/transforms.h
