--- a/man/xmlsec-config.1
+++ b/man/xmlsec-config.1
@@ -1,6 +1,7 @@
 .TH XMLSEC-CONFIG "1" "2002" "xmlsec-config" "User Commands"
 .SH NAME
-xmlsec-config \- manual page for xmlsec-config
+xmlsec-config \- script to get information about the installed
+version of the XML Security Library
 .SH SYNOPSIS
 .B xmlsec-config
 [\fIOPTION\fR]...
@@ -24,15 +25,3 @@ display this help and exit
 .TP
 \fB\-\-version\fR
 output version information
-.SH "SEE ALSO"
-The full documentation for
-.B xmlsec-config
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B xmlsec-config
-programs are properly installed at your site, the command
-.IP
-.B info xmlsec-config
-.PP
-should give you access to the complete manual.
