--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
 Aleksey Sanin  <aleksey@aleksey.com>
-Igor Zlatkovic <igor@stud.fh-frankfurt.de> for the Windows port
-John Belmonte  <jvb@prairienet.org> for the Debian port
+
+Contibutions:
+--------------------------------------------------------
+Windows port: Igor Zlatkovic <igor@stud.fh-frankfurt.de>
+Debian port: John Belmonte  <jvb@prairienet.org> 
 
