--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue 13 Aug 2002 09:11:45 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+	* win32/* src/errors.c apps/xmlsec.c: made required changes
+	to support new stuff in win32 port
+
 Tue Aug 13 13:59:32 2002  Aleksey Sanin  <aleksey@aleksey.com>
 	* apps/xmlsec.c configure.in src/ciphers.c src/des.c src/dsa.c 
 	src/hmac.c src/rsa.c: replaced XMLSEC_OPENSSL097 define with 
