--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+Wed Aug 14 17:32:23 2002  Aleksey Sanin  <aleksey@aleksey.com>  
+
+	* docs/api/* include/xmlsec/transforms.h 
+	include/xmlsec/transformsInternal.h include/xmlsec/version.h
+	include/xmlsec/version.h.in src/errors.c src/xpath.c:
+	and more documentation...
+
+Wed Aug 14 16:30:44 2002  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs/api/* include/xmlsec/keyinfo.h include/xmlsec/keys.h
+	include/xmlsec/keysmngr.h include/xmlsec/xmldsig.h 
+	include/xmlsec/xmlenc.h src/debug.c src/keyinfo.c
+	src/keys.c src/keysmngr.c src/xmldsig.c src/xmlenc.c
+	tests/keys.xml: more documentation...
+
+Wed Aug 14 13:08:32 2002  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs/api/* include/xmlsec/errors.h include/xmlsec/xmldsig.h 
+	include/xmlsec/xmlenc.h src/errors.c src/xmldsig.c 
+	src/xmlenc.c src/xmlsec.c: added comments and rebuild documentation
+	* docs/faq.html: update FAQ
+
 Wed 14 Aug 2002 09:44:31 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
 
 	* apps/xmlsec.c: fixed random numbers initialization
