--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Wed 28 Aug 2002 04:22:10 PM PDT  Aleksey Sanin  <aleksey@aleksey.com>
+	* configure.in docs: new 0.0.9 release to fix release packaging problems
+	
 Fri Aug 23 10:54:39 2002  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in docs/download.html docs/index.html docs/news.html:
