--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Thu 29 Aug 2002 08:52:02 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+	* apps/xmlsec.c: fixed minor copy/paste typo (thanks to Devin Heitmueller)
+
 Wed 28 Aug 2002 04:22:10 PM PDT  Aleksey Sanin  <aleksey@aleksey.com>
 	* configure.in docs: new 0.0.9 release to fix release packaging problems
 	
