--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,17 @@
+Sat 31 Aug 2002 03:43:20 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
+	* docs/examples: added a new dsig example from Devin Heitmueller	
+	
 Thu 29 Aug 2002 01:48:35 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
 	* docs/examples/dsig3 docs/examples/dsig4: fixed minor problems
 
 Thu 29 Aug 2002 08:52:02 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+
 	* apps/xmlsec.c: fixed minor copy/paste typo (thanks to Devin Heitmueller)
 
 Wed 28 Aug 2002 04:22:10 PM PDT  Aleksey Sanin  <aleksey@aleksey.com>
+
 	* configure.in docs: new 0.0.9 release to fix release packaging problems
 	
 Fri Aug 23 10:54:39 2002  Aleksey Sanin  <aleksey@aleksey.com>
