*** empty log message ***

--- a/man/xmlsec.1
+++ b/man/xmlsec.1
@@ -212,6 +212,14 @@ Prints the pre-signated data (<dsig:SignedInfo> element).
 Prints all available data.
 
 .TP
+\fB--print-xml\fR
+Prints results in XML format.
+
+.TP
+\fB--print-to-file\fR \fIfile\fR
+Prints result to file \fIfile\fR.
+
+.TP
 \fB--keys\fR \fIfile\fR
 Loads keys from XML keys \fIfile\fR.
 
