--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue 03 Sep 2002 06:24:57 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* xmlsec-config.in: fixed a bug when xslt is not available
+
 Mon 02 Sep 2002 12:20:03 PM PDT Aleksey Sanin  <aleksey@aleksey.com>
 	
 	* docs/*: added LibXML2, LibXSLT and OpenSSL logos
