--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,15 @@
+Thu Oct 10 00:44:36 2002  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* apps/xmlsec.c tests/aleksey-xmldsig-01/enveloping-expired-cert.tmpl
+	tests/aleksey-xmldsig-01/enveloping-expired-cert.xml 
+	tests/keys/expired.crt tests/keys/expired.csr tests/keys/expired.key
+	tests/testDSig.sh: added test case to verify the new "expired cert" feature
+
 Wed Oct  9 23:09:46 2002  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* apps/xmlsec.c include/xmlsec/x509.h src/keysmngr.c
 	src/x509.c: added support for certificate verification parameter
-	when OpenSSL 0.9.7 is used
+	when OpenSSL 0.9.6 is used
 
 Wed Oct  9 20:58:58 2002  Aleksey Sanin  <aleksey@aleksey.com>
 
