--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun 13 Oct 2002 09:37:38 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* configure.in apps/Makefile.am: added dynamic linking option
+	by request from John Belmonte
+
 Fri Oct 11 09:13:27 2002  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* tests/testDSig.sh configure.in apps/xmlsec.c: applied patch from 
