--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-20  set REAL_NAME environment variable  <set EMAIL_ADDRESS environment variable>
+
+	* config.h.in configure.in include/xmlsec/version.h 
+	xmlsec.pc xmlsec.spec docs/download.html 
+	docs/index.html docs/news.html: preparing 0.0.10 release
+
 Sun 13 Oct 2002 09:37:38 AM PDT Aleksey Sanin  <aleksey@aleksey.com>
 	
 	* configure.in apps/Makefile.am: added dynamic linking option
