--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue 05 Nov 2002 10:23:07 PM PST Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* almost all files: major code refactoring - separating OpenSSL
+	dependend code in order to provide support for other 
+	crypto engines
+	* include/xmlsec/openssl src/openssl: the OpenSSL dependend
+	code is moved into these new folders
+	* include/xmlsec/nss src/nss: templates for NSS support
+
 Wed Oct 30 17:14:03 2002  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* config.h.in configure.in: do not add -I/usr/include
